[package]
name = "tts-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "thin"

[dependencies]
deadpool-redis = "0.14"
serde_json = "1"
tracing = "0.1"
sha2 = "0.10"
rand = "0.8"
anyhow = "1"
base64 = "0.21"
ipgen = "1"
cfg-if = "1"
bytes = "1"
jsonwebtoken = "9"
mp3-duration = "0.1"
itertools = "0.12"
aws-sdk-polly = "1.7.0"

[dependencies.fernet]
version = "0.2"
features = ["rustcrypto"]
default-features = false

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["smallvec", "fmt", "ansi", "parking_lot"]

[dependencies.axum]
version = "0.7"
default-features = false
features = ["http1", "http2", "json", "query", "tokio"]

[dependencies.tokio]
version = "1"
features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
    "parking_lot",
    "signal",
]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.redis]
version = "0.24"
default-features = false
features = ["aio", "tokio-comp"]

[dependencies.reqwest]
version = "0.11"
features = ["rustls-tls", "json"]
default-features = false

[dependencies.aws-config]
version = "1.1.1"
features = ["behavior-version-latest"]
