[package]
name = "tts-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "thin"

[dependencies]
serde_json = "1"
tracing = "0.1"
sha2 = "0.10"
rand = "0.8"
anyhow = "1"
base64 = "0.22"
ipgen = "1"
bytes = "1"
jsonwebtoken = "9"
mp3-duration = "0.1"
itertools = "0.13"
aws-sdk-polly = "1.7.0"
small-fixed-array = { version = "0.4.0", features = ["serde"] }
memchr = "2.7.4"
aformat = "0.1.4"
mini-moka = { version = "0.10.3", features = ["sync"] }
arc-swap = "1.7.1"

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["smallvec", "fmt", "ansi", "parking_lot"]

[dependencies.axum]
version = "0.7"
default-features = false
features = ["http1", "http2", "json", "query", "tokio"]

[dependencies.tokio]
version = "1"
features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
    "parking_lot",
    "signal",
]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.reqwest]
version = "0.12"
features = ["rustls-tls", "json"]
default-features = false

[dependencies.aws-config]
version = "1.1.1"
features = ["behavior-version-latest"]
