[package]
name = "tts-service"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "thin"

[dependencies]
serde_json = "1.0.149"
tracing = "0.1.44"
sha2 = "0.10.9"
rand = "0.10.0"
anyhow = "1.0.102"
base64 = "0.22.1"
ipgen = "1.0.2"
bytes = "1.11.1"
mp3-duration = "0.1.10"
itertools = "0.14"
aws-sdk-polly = "1.102.0"
small-fixed-array = { version = "0.4.10", features = ["serde"] }
memchr = "2.8.0"
aformat = "0.1.8"
mini-moka = { version = "0.10.3", features = ["sync"] }
arc-swap = "1.8.2"

[dependencies.tracing-subscriber]
version = "0.3.23"
default-features = false
features = ["smallvec", "fmt", "ansi", "parking_lot"]

[dependencies.axum]
version = "0.8.8"
default-features = false
features = ["http1", "http2", "json", "query", "tokio"]

[dependencies.tokio]
version = "1.50.0"
features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
    "parking_lot",
    "signal",
]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.reqwest]
version = "0.13.2"
features = ["rustls-no-provider", "http2", "query", "json", "gzip", "brotli", "zstd", "deflate"]
default-features = false

[dependencies.aws-config]
version = "1.8.15"
features = ["behavior-version-latest"]

[dependencies.jsonwebtoken]
version = "10.3.0"
features = [ "aws_lc_rs" ]

[dependencies.rustls]
version = "0.23.37"
default-features = false
